Uptade index Commit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -11,16 +11,23 @@
 <body>
     <div class="imagem-com-fundo">
         <a href="https://svriglobal.com/">
-
-        <img src="img/Logo Science.png" alt="Logo Science">
-    </a>
+            <img src="img/Logo Science.png" alt="Logo Science">
+        </a>
     </div>
     <br>
     <br>
     <div class="painel">
-        <h2>T R E I N A M E N T O S - S C I E N C E</h2>
-        <br>
         <div class="treinamentos">
+            <br>
+            <h2> O N <br> B O A R D I N G</h2>
+            <br>
+            <br>
+            <iframe  class= video-youtube  src="https://www.youtube-nocookie.com/embed/GYeC2IeSzSw?si=wGcz7ldayuQflnED" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>T R E I N A M E N T O S - S C I E N C E</h2>
             <img src="img/Central de Proteção de Dados - RD Station.jpg" id="lgpd">
             <img src="img/Redes de computadoras redes sociales _ Vector Premium.jpg" id="tecnologia">
             <br>
