--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="https://svriglobal.com/">
             <img src="img/Logo Science.png" alt="Logo Science">
         </a>
+        <button id="Botaohubtreinamentos" class="botao-link">Treinamentos <br> Science</button>
     </div>
     <br>
     <br>
@@ -22,36 +23,39 @@
             <h2> O N <br> B O A R D I N G</h2>
             <br>
             <br>
-            <iframe  class= video-youtube  src="https://www.youtube-nocookie.com/embed/GYeC2IeSzSw?si=wGcz7ldayuQflnED" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <br>
-            <br>
-            <br>
-            <br>
-            <h2>T R E I N A M E N T O S - S C I E N C E</h2>
-            <img src="img/Central de Proteção de Dados - RD Station.jpg" id="lgpd">
-            <img src="img/Redes de computadoras redes sociales _ Vector Premium.jpg" id="tecnologia">
-            <br>
-            <button id="Botaolgpd" class="botao-link">Treinamento <br>  LGPD</button>
-            <button id="Botaotecnologia" class="botao-link">Treinamento <br>  Tecnologia</button>
-            <br>
-            <br>
-            <br>
-            <img src="img/Integração de Cursos.jpg" id=regulatorio>"
-            <img src="img/Free Vector _ Doctors concept illustration.jpg"
-                id="imagensregulatorioQualidade">
-            <br>
-            <button id="Botaoregulatorio" class="botao-link">Treinamento <br> Regulatório</button>
-            <button id="Botaoqualidade" class="botao-link">Treinamento <br>  Qualidade</button>
-            <br>
-            <br>
-            <img src="img/rh.jpg" id="ch">
-            <img src="img/Download free vector of Illustration of graphic design icon by Tang about pattern, layout artist, content icons, app, and application 297243.jpg" id="academy">
-            <br>
-            <button id="Botaorh" class="botao-link">Treinamento <br> Capital Humano</button>
-            <button id="BotaoAcademy" class="botao-link"> Treinamento <br> Academy </button>
+            <iframe class=video-youtube src="https://www.youtube-nocookie.com/embed/GYeC2IeSzSw?si=wGcz7ldayuQflnED"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
         </div>
-    </div>
-    <script src="code.js"></script>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h2> I N T E G R A Ç Ã O</h2>
+        <br>
+        <br>
+        <div>
+            <button id="Botaocontroladoria" class="botao-link">Integração <br> Controladoria</button>
+            <button id="Botaotecnologia" class="botao-link">Integração <br> Tecnologia</button>
+            <button id="Botaodiretrizes" class="botao-link">Políticas<br> e <br> Diretrizes </button>
+        </div>
+        <script>
+            document.getElementById("Botaotecnologia").onclick = function () {
+                window.location.href = "integracaoti/IntegracaoTI.html"
+            };
+            document.getElementById("Botaocontroladoria").onclick = function () {
+                window.location.href = "https://netorgft4487772.sharepoint.com/sites/ScienceValley/Documentos%20Compartilhados/Forms/AllItems.aspx?ga=1&id=%2Fsites%2FScienceValley%2FDocumentos%20Compartilhados%2FTeam%20Lead%20Innovation%2FReuni%C3%A3o%5Fde%5FGestores%2FPrograma%5FIntegra%5FMaio%5F2023%2FPublica%C3%A7%C3%B5es%20site%2FIntegra%C3%A7%C3%A3o%20Colaboradores%2FControladoria&viewid=f0f00b7e%2D5bf5%2D428e%2D8b15%2D47f17f5612d5/"
+            };
+            document.getElementById("Botaohubtreinamentos").onclick = function () {
+                window.location.href = "centraltreinamentos/centralTreinamentos.html"
+            };
+            document.getElementById("Botaodiretrizes").onclick = function () {
+                window.location.href = "https://netorgft4487772.sharepoint.com/sites/ScienceValley/Documentos%20Compartilhados/Forms/AllItems.aspx?ga=1&id=%2Fsites%2FScienceValley%2FDocumentos%20Compartilhados%2FTeam%20Lead%20Innovation%2FReuni%C3%A3o%5Fde%5FGestores%2FPrograma%5FIntegra%5FMaio%5F2023%2FPublica%C3%A7%C3%B5es%20site%2FDiretrizes%20e%20Politicas%20da%20Institui%C3%A7%C3%A3o&viewid=f0f00b7e%2D5bf5%2D428e%2D8b15%2D47f17f5612d5"
+            };
+
+        </script>
 </body>
 
 </html>
