--- a/treinamentolgpd/TreinamentoLGPDformulario.html
+++ b/treinamentolgpd/TreinamentoLGPDformulario.html
@@ -129,7 +129,7 @@
 </div>              
 <br>
             <button type="submit" id="botaoverificar">Verificar</button>
-            <button type="button" id="finishButton" style="display: none;" onclick="window.location.href='https://forms.office.com/r/sPpTVNQMtx';">Finalizar</button>
+            <button type="button" id="finishButton" style="display: none;" onclick="window.location.href='https://forms.office.com/r/xww6tWh8ad';">Finalizar</button>
         </form>
         
         <script>
