--- a/treinamentoqualidade/TreinamentoQualidade4.html
+++ b/treinamentoqualidade/TreinamentoQualidade4.html
@@ -13,7 +13,7 @@
         <img src="../img/Logo Science.png" alt="Logo Science">
         <nav>
             <ul class="menu">
-                <li><a href="../index.html">Painel de Treinamentos</a></li>
+                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                 <li><a href="#">Aulas</a>
                     <ul>
                         <li><a href="TreinamentoQualidade.html"> Cadastro de Monitoria no PoloTrail </a></li>
