--- a/treinamentoqualidade/TreinamentoQualidade5.html
+++ b/treinamentoqualidade/TreinamentoQualidade5.html
@@ -13,7 +13,7 @@
         <img src="../img/Logo Science.png" alt="Logo Science">
         <nav>
             <ul class="menu">
-                <li><a href="../index.html">Painel de Treinamentos</a></li>
+                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                 <li><a href="#">Aulas</a>
                     <ul>
                         <li><a href="TreinamentoQualidade.html"> Cadastro de Monitoria no PoloTrail </a></li>
@@ -31,7 +31,10 @@
     <br>
     <h3> Utilização do banco de dados</h5>
         <br>
-        <iframe class="video" src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=d19b5183-9e74-442a-a979-a88b37645e98&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="e-Learning - Utilização do banco de dados SVRI 06Junho23.mp4"></iframe>
+        <iframe class="video"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=d19b5183-9e74-442a-a979-a88b37645e98&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
+            title="e-Learning - Utilização do banco de dados SVRI 06Junho23.mp4"></iframe>
         <br>
         <button class="botaovideoEmail" id="qualidade-aula4">Formulário Qualidade</button>
         <script>
