--- a/treinamentotecnologia/TreinamentoTecnologia_Email.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_Email.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundo Curso</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
+
 <body>
     <div class="imagem-com-fundo">
         <img src="../img/Logo Science.png" alt="Logo Science">
         <nav>
-        <ul class = "menu">
-            <li><a href="../index.html">Painel de Treinamentos</a></li>
-            <li><a href="#">Aulas</a>
-            <ul>
-                <li><a href="TreinamentoTecnologia_Email.html">Assinatura webmail</a></li>
-                <li><a href="TreinamentoTecnologia_Email2.html">Assinatura Outlook</a></li>
-                <li><a href="TreinamentoTecnologia_Email3.html">Primeiro Acesso</a></li>
+            <ul class="menu">
+                <li><a href="../integracaoti/IntegracaoTI.html">Integração Science</a></li>
+                <li><a href="#">Aulas</a>
+                    <ul>
+                        <li><a href="TreinamentoTecnologia_Email.html">Assinatura webmail</a></li>
+                        <li><a href="TreinamentoTecnologia_Email2.html">Assinatura Outlook</a></li>
+                        <li><a href="TreinamentoTecnologia_Email3.html">Primeiro Acesso</a></li>
+                    </ul>
             </ul>
-        </ul>
-    </nav>
+        </nav>
     </div>
     <br>
     <br>
     <h2>T U T O R I A L <br> E - M A I L </h2>
     <br>
     <h3> Assinatura webmail</h5>
-    <br>
-    <iframe class="video"  src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=d0f444df-3031-42dd-ad2d-df27659798a8&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Assinatira - webmail.mp4"></iframe>
-    <br>
-    <br>
-    <button class= "botaovideoEmail" id="email-aula2">Assinatura Outlook</button>
-    <script> 
-        document.getElementById("email-aula2").onclick = function() {
-        window.location.href = "TreinamentoTecnologia_Email2.html";
-    };
-    </script>
+        <br>
+        <iframe class="video"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=d0f444df-3031-42dd-ad2d-df27659798a8&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
+            title="Assinatira - webmail.mp4"></iframe>
+        <br>
+        <br>
+        <button class="botaovideoEmail" id="email-aula2">Assinatura Outlook</button>
+        <script>
+            document.getElementById("email-aula2").onclick = function () {
+                window.location.href = "TreinamentoTecnologia_Email2.html";
+            };
+        </script>
 </body>
+
 </html>
