--- a/treinamentotecnologia/TreinamentoTecnologia_Email2.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_Email2.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundo Curso</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
+
 <body>
     <div class="imagem-com-fundo">
         <img src="../img/Logo Science.png" alt="Logo Science">
         <nav>
-        <ul class = "menu">
-            <li><a href="../index.html">Painel de Treinamentos</a></li>
-            <li><a href="#">Aulas</a>
-                <ul>
-                    <li><a href="TreinamentoTecnologia_Email.html">Assinatura webmail</a></li>
-                    <li><a href="TreinamentoTecnologia_Email2.html">Assinatura Outlook</a></li>
-                    <li><a href="TreinamentoTecnologia_Email3.html">Primeiro Acesso</a></li>
-                </ul>
-        </ul>
-    </nav>
+            <ul class="menu">
+                <li><a href="../integracaoti/IntegracaoTI.html">Integração Science</a></li>
+                <li><a href="#">Aulas</a>
+                    <ul>
+                        <li><a href="TreinamentoTecnologia_Email.html">Assinatura webmail</a></li>
+                        <li><a href="TreinamentoTecnologia_Email2.html">Assinatura Outlook</a></li>
+                        <li><a href="TreinamentoTecnologia_Email3.html">Primeiro Acesso</a></li>
+                    </ul>
+            </ul>
+        </nav>
     </div>
     <br>
     <br>
-    <h2>T U T O R I A L <br> E - M A I L </h2>    <br>
+    <h2>T U T O R I A L <br> E - M A I L </h2> <br>
     <h3> Assinatura Outlook</h5>
-    <br>
-    <iframe class="video" src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=0064e4cb-9783-4cfc-9657-5c77a95a11f7&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Assinatura - Outlook.mp4"></iframe>
-    <br>
-    <br>
-    <button class= "botaovideoEmail" id="proximo" class="botao-link">Primeiro Acesso</button>
-    <script> 
-        document.getElementById("proximo").onclick = function() {
-        window.location.href = "TreinamentoTecnologia_Email3.html";
-    };
-    </script>
+        <br>
+        <iframe class="video"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=0064e4cb-9783-4cfc-9657-5c77a95a11f7&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
+            title="Assinatura - Outlook.mp4"></iframe>
+        <br>
+        <br>
+        <button class="botaovideoEmail" id="proximo" class="botao-link">Primeiro Acesso</button>
+        <script>
+            document.getElementById("proximo").onclick = function () {
+                window.location.href = "TreinamentoTecnologia_Email3.html";
+            };
+        </script>
 </body>
+
 </html>
