--- a/treinamentotecnologia/hubtecnologia.html
+++ b/treinamentotecnologia/hubtecnologia.html
@@ -12,8 +12,8 @@
     <div class="imagem-com-fundo">
         <img src="../img/Logo Science.png" alt="Logo Science">
         <nav>
-            <ul class = "menu">
-                <li><a href="../index.html">Painel de Treinamentos</a></li>
+            <ul class="menu">
+                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
             </ul>
         </nav>
     </div>
@@ -24,44 +24,21 @@
         <br>
         <br>
         <img src="../img/tecnologia.jpg" id="tech">
+        <br>
+        <br>
         <div class="teste">
-            <button id = "Botaoemail" class="botao-linkhub">Tutorial e-mail</button> 
-            <div class="estruturaTI">
-                <button id = "Botaoestruturati" class="botao-linkhub">Estrutura T.I</button>
-            </div>
-        <div class="portalColaborador">
-            <button id = "Botaoportalcolaborador" class="botao-linkhubcolaborador">Portal do Colaborador</button>
-        </div>
-        <div class="portalchamado">
-            <button id = "Botaoportalchamado" class="botao-linkhub">Portal de Chamados</button>
-        </div>
-        <div class="sistemas">
-            <button id = "Botaosistemas" class="botao-linkhubsistema">Sistemas</button>
+            <br>
+            <div class="sistemas">
+                <button id="Botaosistemas" class="botao-linkhubsistema">Sistemas</button>
             </div>
         </div>
     </div>
     <script>
-        document.getElementById("Botaoestruturati").onclick = function() {
-    window.location.href = "TreinamentoTecnologia_estruturati.html"
-};
+        document.getElementById("Botaosistemas").onclick = function () {
+            window.location.href = "TreinamentoTecnologia_Sistemas.html"
+        };
 
-document.getElementById("Botaoemail").onclick = function() {
-    window.location.href = "TreinamentoTecnologia_Email.html"
-};
-
-document.getElementById("Botaoportalcolaborador").onclick = function() {
-    window.location.href = "TreinamentoTecnologia_PortalColaborador.html"
-};
-
-document.getElementById("Botaoportalchamado").onclick = function() {
-    window.location.href = "TreinamentoTecnologia_PortalChamado.html"
-};
-
-document.getElementById("Botaosistemas").onclick = function() {
-    window.location.href = "TreinamentoTecnologia_Sistemas.html"
-};
-
-</script>
+    </script>
 </body>
 
 </html>
