--- a/treinamentoregulatorio/TreinamentoRegulatorio2.html
+++ b/treinamentoregulatorio/TreinamentoRegulatorio2.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundo Curso</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
+
 <body>
     <div class="imagem-com-fundo">
         <img src="../img/Logo Science.png" alt="Logo Science">
         <nav>
-        <ul class = "menu">
-            <li><a href="../index.html">Painel de Treinamentos</a></li>
-            <li><a href="#">Aulas</a>
-            <ul>
-                <li><a href="TreinamentoRegulatorio.html"> Cadastro </a></li>
-                <li><a href="TreinamentoRegulatorio2.html"> CEP - CONEP </a></li>
-                <li><a href="TreinamentoRegulatorio3.html"> Relatório Print PB </a></li>
-                <li><a href="TreinamentoRegulatorio4.html"> Troca de documentos iniciais </a></li>
+            <ul class="menu">
+                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                <li><a href="#">Aulas</a>
+                    <ul>
+                        <li><a href="TreinamentoRegulatorio.html"> Cadastro </a></li>
+                        <li><a href="TreinamentoRegulatorio2.html"> CEP - CONEP </a></li>
+                        <li><a href="TreinamentoRegulatorio3.html"> Relatório Print PB </a></li>
+                        <li><a href="TreinamentoRegulatorio4.html"> Troca de documentos iniciais </a></li>
+                    </ul>
             </ul>
-        </ul>
-    </nav>
+        </nav>
     </div>
     <br>
     <br>
     <h2> T R E I N A M E N T O <br> R E G U L A T Ó R I O </h2>
     <br>
     <h3> CEP - CONEP </h5>
-    <br>
-    <iframe class="video" src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=7ec38590-6510-4e0b-9538-bf13ebeecb52&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Plataforma Brasil-CEP-CONEP.mp4"></iframe>
-    <br>
-    <br>
-    <button class= "botaovideoEmail" id="regulatorio-aula3">Relatório Print PB</button>
-    <script> 
-        document.getElementById("regulatorio-aula3").onclick = function() {
-        window.location.href = "TreinamentoRegulatorio3.html";
-    };
-    </script>
+        <br>
+        <iframe class="video"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=7ec38590-6510-4e0b-9538-bf13ebeecb52&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
+            title="Plataforma Brasil-CEP-CONEP.mp4"></iframe>
+        <br>
+        <br>
+        <button class="botaovideoEmail" id="regulatorio-aula3">Relatório Print PB</button>
+        <script>
+            document.getElementById("regulatorio-aula3").onclick = function () {
+                window.location.href = "TreinamentoRegulatorio3.html";
+            };
+        </script>
 </body>
+
 </html>
