--- a/treinamentoregulatorio/TreinamentoRegulatorio4.html
+++ b/treinamentoregulatorio/TreinamentoRegulatorio4.html
@@ -13,7 +13,7 @@
         <img src="../img/Logo Science.png" alt="Logo Science">
         <nav>
             <ul class="menu">
-                <li><a href="../index.html">Painel de Treinamentos</a></li>
+                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                 <li><a href="#">Aulas</a>
                     <ul>
                         <li><a href="TreinamentoRegulatorio.html"> Cadastro </a></li>
@@ -30,7 +30,10 @@
     <br>
     <h3> Troca de documentos iniciais </h5>
         <br>
-        <iframe class="video" src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=d5a6b127-37bc-457f-8774-b090ffcabef3&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Platafórma Regulatório - Troca de documentos iniciais.mp4"></iframe>
+        <iframe class="video"
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=d5a6b127-37bc-457f-8774-b090ffcabef3&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
+            title="Platafórma Regulatório - Troca de documentos iniciais.mp4"></iframe>
         <br>
         <br>
         <button class="botaovideoEmail" id="regulatorio-aula2">Formulário Regulatório</button>
