--- a/treinamentotecnologia/TreinamentoTecnologia_Sistemas.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_Sistemas.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundo Curso</title>
     <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
+
 <body>
     <div class="imagem-com-fundo">
         <img src="../img/Logo Science.png" alt="Logo Science">
         <nav>
-        <ul class = "menu">
-            <li><a href="../index.html">Painel de Treinamentos</a></li>
-            <li><a href="#">Aulas</a>
-                <ul>
-                    <li><a href="TreinamentoTecnologia_Sistemas.html">PoloTrail</a></li>
-                    <li><a href="TreinamentoTecnologia_Sistemas2.html">Regulatório</a></li>
-                </ul>
-        </ul>
-    </nav>
+            <ul class="menu">
+                <li><a href="../integracaoti/IntegracaoTI.html">Integração Science</a></li>
+                <li><a href="#">Aulas</a>
+                    <ul>
+                        <li><a href="TreinamentoTecnologia_Sistemas.html">PoloTrail</a></li>
+                        <li><a href="TreinamentoTecnologia_Sistemas2.html">Regulatório</a></li>
+                    </ul>
+            </ul>
+        </nav>
     </div>
     <br>
     <br>
@@ -26,14 +28,17 @@
     <br>
     <h5>PoloTrail</h5>
     <br>
-    <iframe class="video" src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=e155effd-8bb6-4dd1-9cce-77e679771c6f&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Acesso PoloTrial.mp4"></iframe>
+    <iframe class="video"
+        src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=e155effd-8bb6-4dd1-9cce-77e679771c6f&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+        width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Acesso PoloTrial.mp4"></iframe>
     <br>
     <br>
-    <button class= "botaovideoEmail" id="proximo">Regulatório</button>
-    <script> 
-        document.getElementById("proximo").onclick = function() {
-        window.location.href = "TreinamentoTecnologia_Sistemas2.html";
-    };
+    <button class="botaovideoEmail" id="proximo">Regulatório</button>
+    <script>
+        document.getElementById("proximo").onclick = function () {
+            window.location.href = "TreinamentoTecnologia_Sistemas2.html";
+        };
     </script>
 </body>
+
 </html>
