--- a/centraltreinamentos/centralTreinamentos.html
+++ b/centraltreinamentos/centralTreinamentos.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos</title>
-    <link rel="stylesheet" type="text/css" href="/arte.css">
+    <link rel="stylesheet" type="text/css" href="../arte.css">
 </head>
 
 <body>
     <div class="imagem-com-fundo">
         <a href="https://svriglobal.com/">
-            <img src="/img/Logo Science.png" alt="Logo Science">
+            <img src="../img/Logo Science.png" alt="Logo Science">
         </a>
         <button id="Botaoindex" class="botao-link">Integração <br> Science</button>
     </div>
@@ -25,30 +25,30 @@
             <br>
             <br>
             <h2>T R E I N A M E N T O S - S C I E N C E</h2>
-            <img src="/img/Central de Proteção de Dados - RD Station.jpg" id="lgpd">
-            <img src="/img/Redes de computadoras redes sociales _ Vector Premium.jpg" id="tecnologia">
+            <img src="../img/Central de Proteção de Dados - RD Station.jpg" id="lgpd">
+            <img src="../img/Redes de computadoras redes sociales _ Vector Premium.jpg" id="tecnologia">
             <br>
             <button id="Botaolgpd" class="botao-link">Treinamento <br> LGPD</button>
             <button id="Botaotecnologia" class="botao-link">Treinamento <br> Tecnologia</button>
             <br>
             <br>
             <br>
-            <img src="/img/Integração de Cursos.jpg" id=regulatorio>"
-            <img src="/img/Free Vector _ Doctors concept illustration.jpg" id="imagensregulatorioQualidade">
+            <img src="../img/Integração de Cursos.jpg" id=regulatorio>"
+            <img src="../img/Free Vector _ Doctors concept illustration.jpg" id="imagensregulatorioQualidade">
             <br>
             <button id="Botaoregulatorio" class="botao-link">Treinamento <br> Regulatório</button>
             <button id="Botaoqualidade" class="botao-link">Treinamento <br> Qualidade</button>
             <br>
             <br>
-            <img src="/img/rh.jpg" id="ch">
-            <img src="/img/Download free vector of Illustration of graphic design icon by Tang about pattern, layout artist, content icons, app, and application 297243.jpg"
+            <img src="../img/rh.jpg" id="ch">
+            <img src="../img/Download free vector of Illustration of graphic design icon by Tang about pattern, layout artist, content icons, app, and application 297243.jpg"
                 id="academy">
             <br>
             <button id="Botaorh" class="botao-link">Treinamento <br> Capital Humano</button>
             <button id="BotaoAcademy" class="botao-link"> Treinamento <br> Academy </button>
         </div>
     </div>
-    <script src="/code.js"></script>
+    <script src="../code.js"></script>
 </body>
 
 </html>
