--- a/centraltreinamentos/centralTreinamentos.html
+++ b/centraltreinamentos/centralTreinamentos.html
@@ -13,40 +13,40 @@
         <a href="https://svriglobal.com/">
             <img src="../img/Logo Science.png" alt="Logo Science">
         </a>
-        <button id="Botaoindex" class="botao-link">Integração <br> Science</button>
+        <button id="Botaoindex" class="botao-link">Integração Science</button>
     </div>
     <br>
-    <br>
-    <div class="painel">
-        <div class="treinamentos">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <h2>T R E I N A M E N T O S - S C I E N C E</h2>
+
+    <div class="treinamentos">
+        <h2>T R E I N A M E N T O S - S C I E N C E</h2>
+        <br>
+        <br>
+        <div class="testeconteiner">
             <img src="../img/Central de Proteção de Dados - RD Station.jpg" id="lgpd">
+            <img src="../img/Integração de Cursos.jpg" id=regulatorio>
             <img src="../img/Redes de computadoras redes sociales _ Vector Premium.jpg" id="tecnologia">
-            <br>
-            <button id="Botaolgpd" class="botao-link">Treinamento <br> LGPD</button>
-            <button id="Botaotecnologia" class="botao-link">Treinamento <br> Tecnologia</button>
-            <br>
-            <br>
-            <br>
-            <img src="../img/Integração de Cursos.jpg" id=regulatorio>"
+        </div>
+        <div class="conteinerbotao">
+            <button id="Botaolgpd" class="botao-link">Treinamento LGPD</button>
+            <button id="Botaoregulatorio" class="botao-link">Treinamento Regulatório</button>
+            <button id="Botaotecnologiacentral" class="botao-link">Treinamento Tecnologia</button>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="testeconteiner">
             <img src="../img/Free Vector _ Doctors concept illustration.jpg" id="imagensregulatorioQualidade">
-            <br>
-            <button id="Botaoregulatorio" class="botao-link">Treinamento <br> Regulatório</button>
-            <button id="Botaoqualidade" class="botao-link">Treinamento <br> Qualidade</button>
-            <br>
-            <br>
             <img src="../img/rh.jpg" id="ch">
             <img src="../img/Download free vector of Illustration of graphic design icon by Tang about pattern, layout artist, content icons, app, and application 297243.jpg"
                 id="academy">
-            <br>
-            <button id="Botaorh" class="botao-link">Treinamento <br> Capital Humano</button>
-            <button id="BotaoAcademy" class="botao-link"> Treinamento <br> Academy </button>
         </div>
+        <br>
+        <div class="conteinerbotao">
+            <button id="Botaoqualidade" class="botao-link">Treinamento Qualidade</button>
+            <button id="Botaorh" class="botao-link">Treinamento Capital Humano</button>
+            <button id="BotaoAcademy" class="botao-link"> Treinamento Academy </button>
+        </div>
+
     </div>
     <script src="../code.js"></script>
 </body>
