--- a/treinamentoqualidade/TreinamentoQualidade5.html
+++ b/treinamentoqualidade/TreinamentoQualidade5.html
@@ -16,10 +16,8 @@
                 <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                 <li><a href="#">Aulas</a>
                     <ul>
-                        <li><a href="TreinamentoQualidade.html"> Cadastro de Monitoria no PoloTrail </a></li>
                         <li><a href="TreinamentoQualidade2.html"> Como obter folha de rosto </a></li>
                         <li><a href="TreinamentoQualidade3.html"> Regulatório Plataforma Brasil </a></li>
-                        <li><a href="TreinamentoQualidade4.html"> Utilização do PoloTrail </a></li>
                         <li><a href="TreinamentoQualidade5.html"> Utilização do banco de dados</a></li>
                     </ul>
             </ul>
@@ -39,7 +37,7 @@
         <button class="botaovideoEmail" id="qualidade-aula4">Formulário Qualidade</button>
         <script>
             document.getElementById("qualidade-aula4").onclick = function () {
-                window.location.href = "https://forms.office.com/r/6AyxyGzSrP";
+                window.location.href = "https://forms.office.com/r/Q2yER2Smn0";
             };
         </script>
 </body>
