--- a/treinamentoregulatorio/TreinamentoRegulatorio4.html
+++ b/treinamentoregulatorio/TreinamentoRegulatorio4.html
@@ -39,7 +39,7 @@
         <button class="botaovideoEmail" id="regulatorio-aula2">Formulário Regulatório</button>
         <script>
             document.getElementById("regulatorio-aula2").onclick = function () {
-                window.location.href = "https://forms.office.com/r/gpbCkgGxBR";
+                window.location.href = "TreinamentoRegulatorioformulario.html";
             };
         </script>
 </body>
