--- a/treinamentotecnologia/TreinamentoTecnologia_Sistemas.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_Sistemas.html
@@ -13,18 +13,18 @@
         <img src="../img/Logo Science.png" alt="Logo Science">
         <nav>
             <ul class="menu">
-                <li><a href="../integracaoti/IntegracaoTI.html">Integração Science</a></li>
+                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                 <li><a href="#">Aulas</a>
                     <ul>
-                        <li><a href="TreinamentoTecnologia_Sistemas.html">PoloTrail</a></li>
-                        <li><a href="TreinamentoTecnologia_Sistemas2.html">Regulatório</a></li>
+                        <li><a href="TreinamentoTecnologia_Sistemas.html">Acesso ao poloTrail</a></li>
+                        <li><a href="TreinamentoTecnologia_Sistemas2.html">Acesso ao regulatório</a></li>
                     </ul>
             </ul>
         </nav>
     </div>
     <br>
     <br>
-    <h2>S I S T E M A S</h2>
+    <h2>A C E S S O S</h2>
     <br>
     <h5>PoloTrail</h5>
     <br>
