--- a/treinamentotecnologia/TreinamentoTecnologia_Sistemas2.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_Sistemas2.html
@@ -13,18 +13,18 @@
         <img src="../img/Logo Science.png" alt="Logo Science">
         <nav>
             <ul class="menu">
-                <li><a href="../integracaoti/IntegracaoTI.html">Integração Science</a></li>
+                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                 <li><a href="#">Aulas</a>
                     <ul>
-                        <li><a href="TreinamentoTecnologia_Sistemas.html">PoloTrail</a></li>
-                        <li><a href="TreinamentoTecnologia_Sistemas2.html">Regulatório</a></li>
+                        <li><a href="TreinamentoTecnologia_Sistemas.html">Acesso ao poloTrail</a></li>
+                        <li><a href="TreinamentoTecnologia_Sistemas2.html">Acesso ao regulatório</a></li>
                     </ul>
             </ul>
         </nav>
     </div>
     <br>
     <br>
-    <h2>S I S T E M A S</h2>
+    <h2>A C E S S O S</h2>
     <br>
     <h5>Regulatório</h5>
     <br>
@@ -33,10 +33,10 @@
         width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Acesso Regulatorio.mp4"></iframe>
     <br>
     <br>
-    <button class="botaovideoEmail" id="proximo">Formulário Tecnologia</button>
+    <button class="botaovideoEmail" id="proximo">PoloTrail</button>
     <script>
         document.getElementById("proximo").onclick = function () {
-            window.location.href = "https://forms.office.com/r/4zR7hRzf1p";
+            window.location.href = "TreinamentoTecnologia_Polo.html";
         };
     </script>
 </body>
