--- a/treinamentotecnologia/hubtecnologia.html
+++ b/treinamentotecnologia/hubtecnologia.html
@@ -29,7 +29,10 @@
         <div class="teste">
             <br>
             <div class="sistemas">
-                <button id="Botaosistemas" class="botao-linkhubsistema">Sistemas</button>
+                <button id="Botaosistemas" class="botao-linkhubsistema">Acessos</button>
+            </div>
+            <div class="conteinerbotao">
+                <button id="Botaopolotrail" class="botao-linkhubsistema">PoloTrail</button>
             </div>
         </div>
     </div>
@@ -37,7 +40,9 @@
         document.getElementById("Botaosistemas").onclick = function () {
             window.location.href = "TreinamentoTecnologia_Sistemas.html"
         };
-
+        document.getElementById("Botaopolotrail").onclick = function () {
+            window.location.href = "TreinamentoTecnologia_Polo.html"
+        };
     </script>
 </body>
 
