--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
         <a href="https://svriglobal.com/">
             <img src="img/Logo Science.png" alt="Logo Science">
         </a>
-        <button id="Botaohubtreinamentos" class="botao-link">Treinamentos <br> Science</button>
+        <button id="Botaohubtreinamentos" class="botao-link">Treinamentos Science</button>
     </div>
     <br>
     <br>
     <div class="painel">
         <div class="treinamentos">
             <br>
-            <h2> O N <br> B O A R D I N G</h2>
+            <h2> B E M V I N D O !</h2>
+            <h4>Assista o vídeo institucional</h4>
             <br>
             <br>
             <iframe class=video-youtube src="https://www.youtube-nocookie.com/embed/GYeC2IeSzSw?si=wGcz7ldayuQflnED"
@@ -37,9 +38,9 @@
         <br>
         <br>
         <div>
-            <button id="Botaocontroladoria" class="botao-link">Integração <br> Controladoria</button>
-            <button id="Botaotecnologia" class="botao-link">Integração <br> Tecnologia</button>
-            <button id="Botaodiretrizes" class="botao-link">Políticas<br> e <br> Diretrizes </button>
+            <button id="Botaocontroladoria" class="botao-link">Integração Controladoria</button>
+            <button id="Botaodiretrizes" class="botao-link">Políticas e Diretrizes </button>
+            <button id="Botaotecnologia" class="botao-link">Integração Tecnologia</button>
         </div>
         <script>
             document.getElementById("Botaotecnologia").onclick = function () {
