--- a/centraltreinamentos/centralTreinamentos.html
+++ b/centraltreinamentos/centralTreinamentos.html
@@ -46,7 +46,14 @@
             <button id="Botaorh" class="botao-link">Treinamento Capital Humano</button>
             <button id="BotaoAcademy" class="botao-link"> Treinamento Academy </button>
         </div>
-
+        <br>
+        <br>
+        <div class="testeconteiner">
+            <img src="../img/feasibility.png" id="imagemfeasibility">
+        </div>
+        <div class="conteinerbotao">
+            <button id="Botaofeasibility" class="botao-link"> Treinamento Feasibility </button>
+        </div>
     </div>
     <script src="../code.js"></script>
 </body>
