--- a/treinamentoacademy/TreinamentoAcademy.html
+++ b/treinamentoacademy/TreinamentoAcademy.html
@@ -1,2 +1,45 @@
-<p>ARRUMAR DEPOIS</p>
-<p>https://forms.office.com/r/FiMz0H6i4A forms</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fundo Curso</title>
+    <link rel="stylesheet" type="text/css" href="../arte.css">
+</head>
+
+<body>
+    <div class="imagem-com-fundo">
+        <img src="../img/Logo Science.png" alt="Logo Science">
+        <nav>
+            <ul class="menu">
+                <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                <li><a href="#">Aulas</a>
+                    <ul>
+                        <li><a href="TreinamentoAcademy.html">Pipeline</a></li>
+
+                    </ul>
+            </ul>
+        </nav>
+    </div>
+    <br>
+    <br>
+    <h2>T R E I N A M E N T O - F E A S I B I L I T Y</h2>
+    <br>
+    <h3> Feasibility </h5>
+        <br>
+        <iframe class="video"
+            src="https://netorgft4487772-my.sharepoint.com/personal/camilla_ribeiro_svriglobal_com/_layouts/15/embed.aspx?UniqueId=51c476f7-a071-4e8e-aacb-115e1b28e3c5&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+            width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
+            title="Call gravar-20240311_094858-Gravação de Reunião.mp4"></iframe>
+        <br>
+        <br>
+        <button class="botaovideo" id="lgpd-aula2" class="botao-link">Próxima aula</button>
+        <script>
+            document.getElementById("lgpd-aula2").onclick = function () {
+                window.location.href = ".html";
+            };
+        </script>
+</body>
+
+</html>
