--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 window.location.href = "centraltreinamentos/centralTreinamentos.html"
             };
             document.getElementById("Botaodiretrizes").onclick = function () {
-                window.location.href = "https://netorgft4487772.sharepoint.com/sites/ScienceValley/Documentos%20Compartilhados/Forms/AllItems.aspx?ga=1&id=%2Fsites%2FScienceValley%2FDocumentos%20Compartilhados%2FTeam%20Lead%20Innovation%2FReuni%C3%A3o%5Fde%5FGestores%2FPrograma%5FIntegra%5FMaio%5F2023%2FPublica%C3%A7%C3%B5es%20site%2FDiretrizes%20e%20Politicas%20da%20Institui%C3%A7%C3%A3o&viewid=f0f00b7e%2D5bf5%2D428e%2D8b15%2D47f17f5612d5"
+                window.location.href = "https://netorgft4487772.sharepoint.com/:f:/s/ScienceValley/EhssvBplVapDsI54MJxxtUwB1Tv9VUaPRT5kpDE5tuV9Qw?e=Y4jJcj"
             };
 
         </script>
