--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
             document.getElementById("Botaohubtreinamentos").onclick = function () {
                 window.location.href = "centraltreinamentos/centralTreinamentos.html"
             };
+
             document.getElementById("Botaodiretrizes").onclick = function () {
-                window.location.href = "https://netorgft4487772.sharepoint.com/:f:/s/ScienceValley/EhssvBplVapDsI54MJxxtUwB1Tv9VUaPRT5kpDE5tuV9Qw?e=Y4jJcj"
+                window.location.href = "politicas/politicasdone.html"
             };
+
 
         </script>
 </body>
