--- a/politicas/politicasdone.html
+++ b/politicas/politicasdone.html
@@ -39,7 +39,7 @@
         </div>
         <script>
             document.getElementById("Botaodiretrizes").onclick = function () {
-                window.location.href = "https://netorgft4487772.sharepoint.com/:f:/s/ScienceValley/EhssvBplVapDsI54MJxxtUwB1Tv9VUaPRT5kpDE5tuV9Qw?e=Y4jJcj"
+                window.location.href = "https://netorgft4487772.sharepoint.com/:f:/s/ScienceValley/EkJmpZ2uovJCsakM2u6JaUAB1BdrWDbTg8QhPpectsSdVw?e=KShpK4"
             };
 
             document.getElementById("Botaoformdiretrizes").onclick = function () {
